Vue bug fixes (#1564)
* Ensure search results retrieved after brief object on page creation/mounting

* Recover removed facets when going back and forth between object types that have different facets. Trigger url updates whenever search results load. Fix tests and have them retrieve stubbed responses for container metadata

* Adjust weird spacing on work/file header

* Cleanup

* Fix top gray area overflowing into bottom area when no viewer

--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -441,7 +441,7 @@ img.data-thumb {
 
 .child-records {
   font-size: 16px;
-  margin: 50px 50px 25px 50px;
+  margin: 30px 50px 25px 50px;
 
   h3 {
     font-size: 16px;
@@ -515,7 +515,7 @@ img.data-thumb {
   h2 {
     font-size: 2.5rem;
     line-height: 1;
-    margin: 0 20px 20px 25px;
+    margin: 0 10px 10px 10px;
     padding-left: 0;
 
     .thumbnail {
@@ -649,6 +649,11 @@ img.data-thumb {
     }
 
   }
+}
+
+.full_record_bottom {
+  padding-top: 30px;
+  background-color: white;
 }
 
 /*@TODO remove breadcrumb css one full record page is converted to Vue */
